--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "-",
+  "name": "kwabox",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,6 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "lucide-vue-next": "^0.559.0",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
